--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,5 @@
-# This is a basic workflow to help you get started with Actions
+name: Angular-CI
 
-name: Angular 18 CI
-
-# Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
@@ -10,33 +7,38 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions: write-all
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: CheckOut
         uses: actions/checkout@v4
 
+      # Configuracion Node.js
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.2
         with:
-          node-version: "20.14.0"
-      - name: Instalar dependencias
-        run: npm i
-      - name: Build Proyecto
-        run: npm run build:prod
+          node-version: "20.11.0"
 
+      # Instalación de dependencias
+      - name: Instala dependencias
+        run:  npm i
+
+      # Despliegue de la aplicación
+      - name: Build
+        run:  npm run build:prod
+
+        # Deploy GitHub Pages
       - name: GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4.0.0
         with:
           build_dir: dist/gbr-shop/browser
           target_branch: gh-pages
         env:
-          GITHUB_TOKEN: ${{secrets.GH_TOKEN}
+          GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
